markdown/2.7/Test-LocalSiteLinks.md
# Test-LocalSiteLinks

Verify that relative links to files and images exist in a Markdown
source tree.

# Syntax
```PowerShell
 Test-LocalSiteLinks [-Path] <String>  [<CommonParameters>] 
```


# Description


Scans a directory tree for Markdown files and `Build.json` files. Relative links found in these
files are checked. Broken links are reported. Link checking is not restricted to files in a
static site project generated by [`New-StaticHTMLSiteProject`](New-StaticHTMLSiteProject.md), though that is most likely its
primary use.





# Parameters

<blockquote>



## -Path \<String\>

<blockquote>

Path to the root of a directory tree containing Markdown sources.
Typically this is the sources directory configured in `Build.json` by
`markdown_dir`. See
[Static Site Project Customization](about_MarkdownToHTML.md#static-site-project-customization)
for more information.

---

Parameter Property         | Value
--------------------------:|:----------
Required?                  | true
Position?                  | 1
Default value              | ``
Accept pipeline input?     | false
Accept wildcard characters?| true

</blockquote>


</blockquote>


# Inputs
None. This function does not read anything from the pipe.


# Outputs
Error objects having the following properties:

| Property | Description                                                           |
| :------: | --------------------------------------------------------------------- |
| `File`   | Path to file containing the proken link.                              |
| `Line`   | Line number or config option containing the error.                    |
| `Link`   | The broken link or navigation specification (for `Build.jdon files`). |

# Examples


## EXAMPLE 1

> ~~~ PowerShell
> Test-LocalSiteLinks -Path E:\lab\...\markdown
> ~~~
>
> 
> Generate a report for broken relative links in Markdown files and `Build.json`
> files found under the `E:\lab\...\markdown` directory tree.
> 
> The broken links report looks similar to this:
> ~~~
> File                            Line Link
> ----                            ---- ----
> E:\lab\...anced\Saved Search.md   32 ../Tagging%20Pages/Tagging%20Pages.md
> E:\lab\...anced\Saved Search.md   33 Finding%20Notes.md#Dia-5
> E:\lab\...anced\Saved Search.md   35 Finding%20Notes.md#Dia-2
> E:\lab\...anced\Saved Search.md   38 ../Update.md
> E:\lab\...anced\Saved Search.md   39 ../Tagging%20Pages/Tagging%20Pages.md#Dia-5
> E:\lab\...anced\Saved Search.md   40 ../Tagging%20Pages/Tagging%20Pages.md
> E:\lab\...anced\Saved Search.md   48 ../Update.md
> E:\lab\...anced\Saved Search.md   49 ../Tagging%20Pages/Tagging%20Pages.md#Dia-5
> E:\lab\...anced\Saved Search.md   50 ../Tagging%20Pages/Tagging%20Pages.md
> E:\lab\...anced\Saved Search.md   55 Finding%20Notes.md#Dia-14
> E:\lab\...abs\Preferences.md       9 ../../Tagging%20Pages/Tagging%20Pages.png
> E:\lab\...abs\Preferences.md      52 ../Tagging%20Pages/images/TaggedPage.png
> E:\lab\...abs\Preferences.md      56 ../Tagging%20Pages/Tagging%20Pages.md
> E:\lab\...abs\Preferences.md      59 ../Update.md
> E:\lab\...abs\Preferences.md      60 ../Tagging%20Pages/Tagging%20Pages.md#Dia-5
> E:\lab\...abs\Preferences.md      61 ../Tagging%20Pages/Tagging%20Pages.md
> E:\lab\...abs\Preferences.md      79 ../Update.md
> E:\lab\...ges\Tagging Pages.md    35 ../Search/SavedSearch.md
> E:\lab\...ges\Tagging Pages.md    37 ../Settings/Preferences-Tab.md
> E:\lab\...ges\Tagging Pages.md    71 ../Settings/Preferences-Tab.md
> E:\lab\...ges\Tagging Pages.md   117 ../Settings/Preferences-Tab..md
> E:\lab\...ges\Tagging Pages.md   137 ../Settings/Preferences-Tab.md
> E:\lab\...ges\Tagging Pages.md   156 ../Settings/Preferences-Tab.md
> ~~~
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
 
## EXAMPLE 2

> ~~~ PowerShell
> Test-LocalSiteLinks -Path E:\lab\...\markdown | Out-GridView
> ~~~
>
> 
> Generates a report for broken relative links in Markdown files and `Build.json`
> files found under the `E:\lab\...\markdown` directory tree and opens a
> dialog window to display the errors.
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 


# Related Links

* [https://wethat.github.io/MarkdownToHtml/2.7/Test-LocalSiteLinks.html](https://wethat.github.io/MarkdownToHtml/2.7/Test-LocalSiteLinks.html) 
* [Static Site Project Customization](about_MarkdownToHTML.md#static-site-project-customization) 
* [`New-StaticHTMLSiteProject`](New-StaticHTMLSiteProject.md)

---

<cite>Module: MarkDownToHTML; Version: 2.7.0; (c) 2018-2022 WetHat Lab. All rights reserved.</cite>
